| Summary: | ASTERISK-22072: 'I' Option Not Supported - bridging core lacks support to suppress COLP updates when joining a bridge | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2013-07-12 16:42:04 | Date Closed: | 2013-09-13 17:16:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Bridging |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) bridge_colp.txt | |
| Description: | The bridging core currently has no support to suppress COLP updates when joining a bridge. This renders the 'I' option to certain applications, which prevents it, ineffective. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-07-12 18:35:45.843-0500 Some relevant notes from the review that includes the 'I' option. | ||