res/res_pjsip_refer.c
@@ -768,7 +768,8 @@ static int refer_incoming_invite_request(struct ast_sip_session *session, struct
 			response = 500;
 		}
 	} else {
-		if (ast_bridge_impart(invite.bridge, session->channel, invite.channel, NULL, 1)) {
+		if (ast_bridge_impart(invite.bridge, session->channel, invite.channel, NULL,
+			AST_BRIDGE_IMPART_CHAN_INDEPENDENT)) {
 			response = 500;
 		}
 	}
